--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "grunt-contrib-concat": "latest",
     "grunt-contrib-uglify": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-htmlmin": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-contrib-coffee": "latest",
     "grunt-contrib-copy": "latest",
-    "grunt-browser-sync": "latest"
+    "grunt-browser-sync": "latest",
+    "grunt-processhtml": "latest"
   }
 }
